--- a/test/dummy30/Rakefile
+++ b/test/dummy30/Rakefile
@@ -1,4 +1,6 @@
-require File.expand_path '../config/application', __FILE__
+# frozen_string_literal: true
+
+require File.expand_path('../config/application', __dir__)
 require 'rake'
 
 Dummy::Application.load_tasks
