--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rvm:
   - 2.3
   - 2.4
   - 2.5
+before_install:
+  - gem update --system
+  - gem install bundler
 script:
   - rake test
   - bundle exec rubocop
