--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 require: rubocop-rspec
 
 AllCops:
@@ -19,12 +17,16 @@ Metrics/BlockLength:
   Exclude:
     - spec/**/*_spec.rb
 
+Metrics/MethodLength:
+  Exclude:
+    - spec/support/rails_app/db/migrate/**.rb
+
 RSpec/DescribeClass:
   Exclude:
     - spec/integration/**/*_spec.rb
 
 RSpec/ExampleLength:
-  Max: 8
+  Enabled: false
 
 RSpec/MultipleExpectations:
   Enabled: false
