--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install libsqlite3-dev
-        gem update --system
+        gem install bundler
         bundle install --jobs 4 --retry 3
     - name: Run RuboCop
       run: bundle exec rubocop
