--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,15 @@ RSpec/MultipleExpectations:
 Style/Documentation:
   Enabled: false
 
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
 Style/PerlBackrefs:
   Enabled: false
 
