--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-ruby@v1.1.3
+    - uses: ruby/setup-ruby@v1
       with:
         version: 3.1.x
 
