--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,15 @@ jobs:
     strategy:
       matrix:
         ruby:
-        - '2.5.x'
-        - '2.6.x'
-        - '2.7.x'
-        - '3.0.x'
+        - '2.5'
+        - '2.6'
+        - '2.7'
+        - '3.0'
 
     name: Ruby ${{ matrix.ruby }}
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-ruby@v1.1.3
+    - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
     - name: Install dependencies
