--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-ruby@v1.1.3
+    - uses: ruby/setup-ruby@v1
       with:
-        version: 2.7.x
+        version: '3.0'
 
     - name: Publish to RubyGems
       run: |
