--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "bundler"
+    directory: "/spec/support/rails_app"
+    schedule:
+      interval: "daily"
