--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ jobs:
     strategy:
       matrix:
         ruby:
-        - '2.7'
-        - '3.0'
-        - '3.1'
+        - 2.7
+        - 3.0
+        - 3.1
 
     name: Ruby ${{ matrix.ruby }}
     steps:
@@ -19,6 +19,7 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true
     - name: Install dependencies
       run: |
         sudo apt-get update
