--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
     - uses: actions/checkout@master
     - uses: ruby/setup-ruby@v1
       with:
-        version: '3.1'
+        ruby-version: 3.1
+        bundler-cache: true
 
     - name: Publish to RubyGems
       run: |
