--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,10 +14,12 @@ updates:
     schedule:
       interval: "daily"
     ignore:
-      - update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
   - package-ecosystem: "bundler"
     directory: "/spec/support/rails_app"
     schedule:
       interval: "daily"
     ignore:
-      - update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
